# CometBuster

./: .gitignore  Cargo.toml  index.html
assets/shaders/: basic_texture.wgsl  shield.wgsl
src/: c_appstate.rs  c_bundles.rs  c_chargelevel.rs  c_controls.rs  c_events.rs  c_lifetime_spawntime.rs  c_movement_and_collisions.rs  c_screenshake.rs  c_shipstats.rs  c_sprites.rs  c_tags.rs  consts.rs  helpers.rs  main.rs  material_basic.rs  material_shield.rs  s_collision_detection.rs  s_control.rs  s_energy.rs  s_movement.rs  s_pause.rs  s_screen_shake.rs  s_setup_world.rs  s_spawn_despawn.rs
src/shaders/: shield.frag
