[package]
name = "cometbuster"
version = "0.1.0"
authors = ["Alexander Widell"]
edition = "2021"
repository = "https://github.com/koomzog/cometbuster"

[dependencies]
bevy = "0.6.0"
instant = "0.1.1"
rand = "0.8.4"

# ------------

# FAST compile
# If you are using rust stable, remove the "-Zshare-generics=y" below.

#[target.x86_64-unknown-linux-gnu]
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
# `brew install michaeleisel/zld/zld`
#[target.x86_64-apple-darwin]
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

#[target.aarch64-apple-darwin]
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

#[target.x86_64-pc-windows-msvc]
#linker = "rust-lld.exe"
#rustflags = ["-Zshare-generics=n"]

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
#[profile.dev]
#debug = 1